second, quest page with buttons/image/description/title

--- a/quest.html
+++ b/quest.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title id="quest-title">Quest Title</title>
+    <title id="page-title">Quest Title</title>
     <!-- link doc title to quest choice -->
 </head>
 <body>
 
     <header>
-        <h1 id="quest-name">Quest Title</h1>
+        <h1 id="title">Quest Title</h1>
     </header>
 
     <main>
-        <img src="" alt="quest image" id="quest-image">
+        <img src="" alt="quest image" id="image">
 
-        <p id="quest-story"></p>
+        <p id="description"></p>
 
-        <form id="quest-choices">
+        <form id="options">
             <button id="submit">SUBMIT</button>
         </form>
 
