created radio buttons and their descriptions

--- a/quest.html
+++ b/quest.html
@@ -18,8 +18,12 @@
 
         <p id="description"></p>
 
-        <form id="options">
-            <button id="submit">SUBMIT</button>
+        <form id="form">
+            <fieldset id="options">
+                <legend>What will you do?</legend>
+                
+            </fieldset>
+            <button id="submit">CHOOSE</button>
         </form>
 
     </main>
