--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <legend>Character</legend>
             
                 <label>
-                    <input type="radio" name="class" id="class" value="wizerd"> Wizard
+                    <input type="radio" name="class" id="class" value="wizard"> Wizard
                 </label>
                 <label>
-                    <input type="radio" name="class" id="class" value="elf"> ELF
+                    <input type="radio" name="class" id="class" value="elf"> Elf
                 </label>
                 <label>
                     <input type="radio" name="class" id="class" value="troll"> Troll
