--- a/map.html
+++ b/map.html
@@ -19,6 +19,7 @@
         <nav id="quests">
             Where do you want to have a quest? 
         </nav>
+        <a href="results.html">See Results</a>
 
 
     </main>
