--- a/quest.html
+++ b/quest.html
@@ -11,6 +11,9 @@
 
     <header>
         <h1 id="title">Quest Title</h1>
+        <section>
+            <h2 id="user-profile-display"></h2>
+        </section>
     </header>
 
     <main>
@@ -25,10 +28,10 @@
             </fieldset>
             <button id="submit">CHOOSE</button>
         </form>
-
+        <section>
+            <a href="map.html">Return to quest map</a>
+        </section>
     </main>
-
     <script type="module" src="./quest.js"></script>
-
 </body>
 </html>
