--- a/display/map.html
+++ b/display/map.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
     <title>Map</title>
 </head>
 <body>
@@ -23,6 +23,6 @@
 
 
     </main>
-<script type="module" src="./map.js">  </script>
+<script type="module" src="../src/map.js">  </script>
 </body>
 </html>
