--- a/display/quest.html
+++ b/display/quest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
     <title id="page-title">Quest Title</title>
     <!-- link doc title to quest choice -->
 </head>
@@ -32,6 +32,6 @@
             <a href="map.html">Return to quest map</a>
         </section>
     </main>
-    <script type="module" src="./quest.js"></script>
+    <script type="module" src="../src/quest.js"></script>
 </body>
 </html>
