--- a/display/results.html
+++ b/display/results.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="../index.css">
     <title>Results</title>
 </head>
 <body>
@@ -14,8 +14,11 @@
 
     <main>
         <p>You made it out with <span id="total-hp"></span> hp and <span id="total-gold"></span> gold.</p>
+        <br>
+        <p id="result-text"></p>
+        <a href="./index.html">Start Over</a>
     </main>
     
-    <script type="module" src="results.js"></script>
+    <script type="module" src="../src/results.js"></script>
 </body>
 </html>
