--- a/test/tests.html
+++ b/test/tests.html
@@ -10,7 +10,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="https://code.jquery.com/qunit/qunit-2.9.1.js"></script>
-  <script type="module" src="./tally.js"></script>
+  <script type="module" src="./tests.js"></script>
 </body>
 </html>
 
