end of Thursday build

--- a/display/quest.html
+++ b/display/quest.html
@@ -19,6 +19,8 @@
     <main>
         <img src="" alt="quest image" id="image">
 
+        <audio src="" autoplay loop id="audio"></audio>
+
         <p id="description"></p>
 
         <form id="form">
