--- a/display/results.html
+++ b/display/results.html
@@ -14,9 +14,8 @@
 
     <main>
         <p>You made it out with <span id="total-hp"></span> hp and <span id="total-gold"></span> gold.</p>
-        <br>
         <p id="result-text"></p>
-        <a href="./index.html">Start Over</a>
+        <a href="../index.html">Start Over</a>
     </main>
     
     <script type="module" src="../src/results.js"></script>
