--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
         </form>
 
     </main>
-<script type="module" src="../src/index.js">  </script>
+<script type="module" src="./src/index.js">  </script>
 </body>
 </html>
