--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                 <legend>Character</legend>
             
                 <label>
-                    <input type="radio" name="class" id="class" value="wizard"> Wizard
+                    <input type="radio" name="class" id="class" value="a wizard">Wizard
                 </label>
                 <label>
-                    <input type="radio" name="class" id="class" value="elf"> Elf
+                    <input type="radio" name="class" id="class" value="an elf">Elf
                 </label>
                 <label>
-                    <input type="radio" name="class" id="class" value="troll"> Troll
+                    <input type="radio" name="class" id="class" value="a troll">Troll
                 </label>
             
             </fieldset>
