--- a/display/map.html
+++ b/display/map.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|UnifrakturCook:700" rel="stylesheet">
     <title>Map</title>
 </head>
 <body>
