--- a/display/results.html
+++ b/display/results.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="../index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|UnifrakturCook:700" rel="stylesheet">
     <title>Results</title>
 </head>
 <body>
