--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../index.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700|UnifrakturCook:700" rel="stylesheet">
     <title>Main Page</title>
 </head>
 <body>
 
     <header>
-        <h1></h1>
+        <h1>Start your quest!</h1>
     </header>
 
     <main>
